# 3d_on_cpp

./: .gitignore  3d_on_cpp.sln
3d_on_cpp/: 3d_on_cpp.vcxproj  3d_on_cpp.vcxproj.filters  aabb.cpp  aabb.h  basic_functions.h  basic_funtions.h  camera_controller.cpp  camera_controller.h  color_functions.h  complex_shape.cpp  complex_shape.h  file_functions.h  geometry.h  imgui.ini  logic_controller.cpp  logic_controller.h  main.cpp  math_functions.h  packages.config  random_functions.h  ray.h  save_data_contrainer.h  selection_controller.cpp  selection_controller.h  shader.h  shader_controller.cpp  shader_controller.h  shape.cpp  shape.h  transform.h  transform_data.cpp  transform_data.h  ui_controller.cpp  ui_controller.h  vector_functions.h  view_projection.h
3d_on_cpp/shaders/: fragment.glsl  shadow_v.glsl  vertex.glsl
